Добавил яндекс для подключения

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="description" Content=" Черкашина Оксана Владимировна. Официальный сайт педагога ЦИТ города Сланцы.">
 	<meta name="Keywords" content="Черкашина Оксана Владимировна, Сланцевский ЦИТ, город Сланцы, Центр информационных технологий, ЦИТ города Сланцы">
+	<meta name="yandex-verification" content="a5ce863ee6975ad4" />
 
 	<title>Оксана Черкашина.</title>
 
