Настройка gulp, использование шаблонов, imgmin, начало верстки

--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,23 @@
 <html lang="ru">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Блог Оксаны Черкашиной</title>
-  <link rel="stylesheet" href="/css/style.css">
+  //= template/i_head.html
+  //= template/i_link.html
 </head>
 
 <body>
-
+  <header class="header">
+    <h1 class="headen">Оксана Черкашина. Блог педагога.</h1>
+    <h2 class="header_title">Оксана Черкашина.</h2>
+    <img class="header_img" src="./img/header-img.jpg" alt="Фото Оксана Черкашина">
+    <p class="header_descr">Я педагог дополнительного образования в доме творчества и организатор региональных соревнований по робототехнике <a class="link" class="header_descr-link" href="http://xn--90acgda4cbjegs2i.xn--p1ai/">Роботы вперед!</a></p>
+    <div class="reference">
+      <a class="link" href="#">Больше обо мне...</a>
+    </div>
+    <div class="icons">
+      <img src="./img/icons/vk.png" alt="вконтакте">
+    </div>
+  </header>
 </body>
 
 </html>
