Подключение плагина Кэш, шрифтов, настройка gulp

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,14 @@
 <html lang="ru">
 
 <head>
-  //= template/i_head.html
-  //= template/i_link.html
+  //= template/head-index.html
+  //= template/link-index.html
+  <title>Оксана Черкашина. Блог.</title>
 </head>
 
 <body>
   <header class="header">
-    <h1 class="headen">Оксана Черкашина. Блог педагога.</h1>
+    <h1 class="headen">Оксана Черкашина. Блог.</h1>
     <h2 class="header_title">Оксана Черкашина.</h2>
     <img class="header_img" src="./img/header-img.jpg" alt="Фото Оксана Черкашина">
     <p class="header_descr">Я педагог дополнительного образования в доме творчества и организатор региональных соревнований по робототехнике <a class="link" class="header_descr-link" href="http://xn--90acgda4cbjegs2i.xn--p1ai/">Роботы вперед!</a></p>
