Добавление описания к проекту

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
   //= template/head-index.html
   //= template/link-index.html
-  <title>Оксана Черкашина. Блог.</title>
+  <title>Оксана Черкашина. Блог</title>
 </head>
 
 <body>
