Верстка секций карточка, footer.

--- a/src/index.html
+++ b/src/index.html
@@ -10,16 +10,82 @@
 <body>
   <header class="header">
     <h1 class="headen">Оксана Черкашина. Блог.</h1>
-    <h2 class="header_title">Оксана Черкашина.</h2>
-    <img class="header_img" src="./img/header-img.jpg" alt="Фото Оксана Черкашина">
-    <p class="header_descr">Я педагог дополнительного образования в доме творчества и организатор региональных соревнований по робототехнике <a class="link" class="header_descr-link" href="http://xn--90acgda4cbjegs2i.xn--p1ai/">Роботы вперед!</a></p>
-    <div class="reference">
-      <a class="link" href="#">Больше обо мне...</a>
+    <h2 class="header__title">Оксана Черкашина.</h2>
+    <img class="header__img" src="./img/header-img.jpg" alt="Фото Оксана Черкашина">
+    <p class="header__descr">Я педагог дополнительного образования в доме творчества и организатор региональных соревнований по робототехнике <a class="link" href="http://xn--90acgda4cbjegs2i.xn--p1ai/">Роботы вперед!</a></p>
+    <div class="links">
+      <a class="link card-link" href="#">Больше обо мне...</a>
     </div>
     <div class="icons">
-      <img src="./img/icons/vk.png" alt="вконтакте">
+      <a href="" class="link"><img src="./img/icons/vk.png" alt="вконтакте"></a>
     </div>
   </header>
+  <main class="main">
+    <h2 class="main__title">Что нового?</h2>
+    <article class="card">
+      <div class="card-time">
+        <p class="card-time__title">09 ноября, 2019 Кингисепп</p>
+      </div><!-- /.card-time -->
+      <h3 class="card__title">V Окружной форум по робототехнике Кингисепп</h3>
+      <p class="card__descr">9 ноября в Центре информационных технологий г. Кингисепп состоялся V Окружной форум робототехники Юго-Западного образовательного округа «Старт в будущее». Участники форума — обучающиеся и педагоги Кингисеппа, Ивангорода,
+        Сланцев, Гатчины, Киришей, Соснового Бора, Волосово и Нарвы.</p>
+      <div class="card__links links">
+        <a href="" class="link"><img src="./img/icons/youtube.png" alt="логотип ютуб"></a>
+        <a class="link card-link" href="#">Читать далее ...</a>
+      </div>
+      <!-- /.card__links links -->
+      <img src="https://via.placeholder.com/320x180" alt="Логотип соревнования">
+    </article>
+    <article class="card">
+      <div class="card-time">
+        <p class="card-time__title">09 ноября, 2019 Кингисепп</p>
+      </div><!-- /.card-time -->
+      <h3 class="card__title">V Окружной форум по робототехнике Кингисепп</h3>
+      <p class="card__descr">9 ноября в Центре информационных технологий г. Кингисепп состоялся V Окружной форум робототехники Юго-Западного образовательного округа «Старт в будущее». Участники форума — обучающиеся и педагоги Кингисеппа, Ивангорода,
+        Сланцев, Гатчины, Киришей, Соснового Бора, Волосово и Нарвы.</p>
+      <div class="card__links links">
+        <a href="" class="link"><img src="./img/icons/youtube.png" alt="логотип ютуб"></a>
+        <a class="link card-link" href="#">Читать далее ...</a>
+      </div>
+      <!-- /.card__links links -->
+      <img src="https://via.placeholder.com/320x180" alt="Логотип соревнования">
+    </article>
+    <article class="card">
+      <div class="card-time">
+        <p class="card-time__title">09 ноября, 2019 Кингисепп</p>
+      </div><!-- /.card-time -->
+      <h3 class="card__title">V Окружной форум по робототехнике Кингисепп</h3>
+      <p class="card__descr">9 ноября в Центре информационных технологий г. Кингисепп состоялся V Окружной форум робототехники Юго-Западного образовательного округа «Старт в будущее». Участники форума — обучающиеся и педагоги Кингисеппа, Ивангорода,
+        Сланцев, Гатчины, Киришей, Соснового Бора, Волосово и Нарвы.</p>
+      <div class="card__links links">
+        <a href="" class="link"><img src="./img/icons/youtube.png" alt="логотип ютуб"></a>
+        <a class="link card-link" href="#">Читать далее ...</a>
+      </div>
+      <!-- /.card__links links -->
+      <img src="https://via.placeholder.com/320x180" alt="Логотип соревнования">
+    </article>
+    <article class="card">
+      <div class="card-time">
+        <p class="card-time__title">09 ноября, 2019 Кингисепп</p>
+      </div><!-- /.card-time -->
+      <h3 class="card__title">V Окружной форум по робототехнике Кингисепп</h3>
+      <p class="card__descr">9 ноября в Центре информационных технологий г. Кингисепп состоялся V Окружной форум робототехники Юго-Западного образовательного округа «Старт в будущее». Участники форума — обучающиеся и педагоги Кингисеппа, Ивангорода,
+        Сланцев, Гатчины, Киришей, Соснового Бора, Волосово и Нарвы.</p>
+      <div class="card__links links">
+        <a href="" class="link"><img src="./img/icons/youtube.png" alt="логотип ютуб"></a>
+        <a class="link card-link" href="#">Читать далее ...</a>
+      </div>
+      <!-- /.card__links links -->
+      <img src="https://via.placeholder.com/320x180" alt="Логотип соревнования">
+    </article>
+  </main>
+  <footer class="footer">
+    <div class="copy">
+      <span>&copy; 2017-2019 Оксана Черкашина</span>
+      <span>Сделано с <img src="./img/icons/heart-solid.png" alt="маленькое сердечко"> и <img src="./img/icons/coffee-solid.png" alt="с чашкой чай"> </span>
+    </div>
+    <!-- /.copy -->
+  </footer>
 </body>
 
 </html>
