--- a/src/index.html
+++ b/src/index.html
@@ -9,82 +9,97 @@
 
 <body>
   <header class="header">
-    <h1 class="headen">Оксана Черкашина. Блог.</h1>
-    <h2 class="header__title">Оксана Черкашина.</h2>
-    <img class="header__img" src="./img/header-img.jpg" alt="Фото Оксана Черкашина">
-    <p class="header__descr">Я педагог дополнительного образования в доме творчества и организатор региональных соревнований по робототехнике <a class="link" href="http://xn--90acgda4cbjegs2i.xn--p1ai/">Роботы вперед!</a></p>
-    <div class="links">
-      <a class="link card-link" href="#">Больше обо мне...</a>
-    </div>
-    <div class="icons">
-      <a href="" class="link"><img src="./img/icons/vk.png" alt="вконтакте"></a>
-    </div>
+    <h1 class="h1">Оксана Черкашина. Блог.</h1>
   </header>
-  <main class="main">
-    <h2 class="main__title">Что нового?</h2>
-    <article class="card">
-      <div class="card-time">
-        <p class="card-time__title">09 ноября, 2019 Кингисепп</p>
-      </div><!-- /.card-time -->
-      <h3 class="card__title">V Окружной форум по робототехнике Кингисепп</h3>
-      <p class="card__descr">9 ноября в Центре информационных технологий г. Кингисепп состоялся V Окружной форум робототехники Юго-Западного образовательного округа «Старт в будущее». Участники форума — обучающиеся и педагоги Кингисеппа, Ивангорода,
-        Сланцев, Гатчины, Киришей, Соснового Бора, Волосово и Нарвы.</p>
-      <div class="card__links links">
-        <a href="https://youtu.be/xANEOrfSNQA" class="link" target="_blank"><img src="./img/icons/youtube.png" alt="логотип ютуб"></a>
-        <a href="http://kingisepp.ru/news/block-5543/" class="link card-link" target="_blank">Читать далее ...</a>
+
+  <div id="grid">
+    <aside class="sidebar">
+      <div class="container">
+        <h2 class="sidebar__title"><span class="sidebar__title-first">Оксана</span> <br><span class="sidebar__title-second">Черкашина</span></h2>
+        <div class="sidebar__img"><img src="./img/header-img.jpg" alt="Фото Оксана Черкашина"></div>
+        <!-- /.sidebar__img -->
+
+        <p class="sidebar__descr">Я педагог дополнительного образования в доме творчества и организатор региональных соревнований по робототехнике <a class="link" href="http://xn--90acgda4cbjegs2i.xn--p1ai/">Роботы вперед!</a></p>
+        <div class="links">
+          <a class="link card-link" href="#">Больше обо мне...</a>
+        </div>
+        <div class="icons">
+          <a href="" class="link"><img src="./img/icons/vk.png" alt="вконтакте"></a>
+        </div>
       </div>
-      <!-- /.card__links links -->
-      <img src="https://via.placeholder.com/320x180" alt="Логотип соревнования">
-    </article>
-    <article class="card">
-      <div class="card-time">
-        <p class="card-time__title">03 ноября, 2019 Всеволожск</p>
-      </div><!-- /.card-time -->
-      <h3 class="card__title">Открытые соревнования по робототехнике Всеволожск</h3>
-      <p class="card__descr">3 ноября 2019 года прошли Открытые соревнования по робототехнике Всеволожского района. Наши обучающиеся приняли участие в категории "Интеллектуальное сумо". </p>
-      <div class="card__links links">
-        <a href="https://youtu.be/Ufip2-paMz8" class="link" target="_blank"><img src="./img/icons/youtube.png" alt="логотип ютуб"></a>
-        <a href="https://vk.com/wall-75889999_337" class="link card-link" target="_blank">Читать далее ...</a>
+      <!-- /.container -->
+
+    </aside>
+    <main class="main">
+      <h2 class="main__title">Что нового?</h2>
+      <article class="card">
+        <div class="card-time">
+          <p class="card-time__title">09 ноября, 2019 Кингисепп</p>
+        </div><!-- /.card-time -->
+        <h3 class="card__title">V Окружной форум по робототехнике Кингисепп</h3>
+        <p class="card__descr">9 ноября в Центре информационных технологий г. Кингисепп состоялся V Окружной форум робототехники Юго-Западного образовательного округа «Старт в будущее». Участники форума — обучающиеся и педагоги Кингисеппа,
+          Ивангорода,
+          Сланцев, Гатчины, Киришей, Соснового Бора, Волосово и Нарвы.</p>
+        <div class="card__links links">
+          <a href="https://youtu.be/xANEOrfSNQA" class="link" target="_blank"><img src="./img/icons/youtube.png" alt="логотип ютуб"></a>
+          <a href="http://kingisepp.ru/news/block-5543/" class="link card-link" target="_blank">Читать далее ...</a>
+        </div>
+        <!-- /.card__links links -->
+        <img src="https://via.placeholder.com/320x180" alt="Логотип соревнования">
+      </article>
+      <article class="card">
+        <div class="card-time">
+          <p class="card-time__title">03 ноября, 2019 Всеволожск</p>
+        </div><!-- /.card-time -->
+        <h3 class="card__title">Открытые соревнования по робототехнике Всеволожск</h3>
+        <p class="card__descr">3 ноября 2019 года прошли Открытые соревнования по робототехнике Всеволожского района. Наши обучающиеся приняли участие в категории "Интеллектуальное сумо". </p>
+        <div class="card__links links">
+          <a href="https://youtu.be/Ufip2-paMz8" class="link" target="_blank"><img src="./img/icons/youtube.png" alt="логотип ютуб"></a>
+          <a href="https://vk.com/wall-75889999_337" class="link card-link" target="_blank">Читать далее ...</a>
+        </div>
+        <!-- /.card__links links -->
+        <img src="https://via.placeholder.com/320x180" alt="Логотип соревнования">
+      </article>
+      <article class="card">
+        <div class="card-time">
+          <p class="card-time__title">23 октября, 2019 Первомайское, Выборгский район</p>
+        </div><!-- /.card-time -->
+        <h3 class="card__title">Областной сбор "Юный техник".</h3>
+        <p class="card__descr">23.10.2019 обучающиеся Дома творчества участвовали в областном сборе "Юный техник", который проходил в Первомайском центре образования в Выборгском районе. Для ребят провели экскурсии по самому центру и его музею, а
+          также
+          провели 3 увлекательных мастер-класса</p>
+        <div class="card__links links">
+          <a href="https://youtu.be/2ilExnq7F7Q" class="link" target="_blank"><img src="./img/icons/youtube.png" alt="логотип ютуб"></a>
+          <a href="http://pervomayco.ru/about/news/2019/543/" class="link card-link" target="_blank">Читать далее ...</a>
+        </div>
+        <!-- /.card__links links -->
+        <img src="https://via.placeholder.com/320x180" alt="Логотип соревнования">
+      </article>
+      <article class="card">
+        <div class="card-time">
+          <p class="card-time__title">19 мая, 2019 Сланцы</p>
+        </div><!-- /.card-time -->
+        <h3 class="card__title">III соревнования Роботы вперед</h3>
+        <p class="card__descr">19 мая 2019 года в Доме творчества на базе ул.Грибоедова д.8 прошли lll Соревнования «Роботы вперёд». В данном мероприятии приняли участие обучающиеся разных учреждений из г.Кингисепп, г.Ивангорода, Санкт-Петербурга,
+          г.Сланцы и Волосовского района. </p>
+        <div class="card__links links">
+          <a href="https://youtu.be/GBCS0qtjDgU" class="link" target="_blank"><img src="./img/icons/youtube.png" alt="логотип ютуб"></a>
+          <a href="https://vk.com/wall-75889999_319" class="link card-link" target="_blank">Читать далее ...</a>
+        </div>
+        <!-- /.card__links links -->
+        <img src="https://via.placeholder.com/320x180" alt="Логотип соревнования">
+      </article>
+    </main>
+    <footer class="footer">
+      <div class="copy">
+        <span>&copy; 2017-2019 Оксана Черкашина</span>
+        <span>Сделано с <img src="./img/icons/heart-solid.png" alt="маленькое сердечко"> и <img src="./img/icons/coffee-solid.png" alt="с чашкой чай"> </span>
       </div>
-      <!-- /.card__links links -->
-      <img src="https://via.placeholder.com/320x180" alt="Логотип соревнования">
-    </article>
-    <article class="card">
-      <div class="card-time">
-        <p class="card-time__title">23 октября, 2019 Первомайское, Выборгский район</p>
-      </div><!-- /.card-time -->
-      <h3 class="card__title">Областной сбор "Юный техник".</h3>
-      <p class="card__descr">23.10.2019 обучающиеся Дома творчества участвовали в областном сборе "Юный техник", который проходил в Первомайском центре образования в Выборгском районе. Для ребят провели экскурсии по самому центру и его музею, а также
-        провели 3 увлекательных мастер-класса</p>
-      <div class="card__links links">
-        <a href="https://youtu.be/2ilExnq7F7Q" class="link" target="_blank"><img src="./img/icons/youtube.png" alt="логотип ютуб"></a>
-        <a href="http://pervomayco.ru/about/news/2019/543/" class="link card-link" target="_blank">Читать далее ...</a>
-      </div>
-      <!-- /.card__links links -->
-      <img src="https://via.placeholder.com/320x180" alt="Логотип соревнования">
-    </article>
-    <article class="card">
-      <div class="card-time">
-        <p class="card-time__title">19 мая, 2019 Сланцы</p>
-      </div><!-- /.card-time -->
-      <h3 class="card__title">III соревнования Роботы вперед</h3>
-      <p class="card__descr">19 мая 2019 года в Доме творчества на базе ул.Грибоедова д.8 прошли lll Соревнования «Роботы вперёд». В данном мероприятии приняли участие обучающиеся разных учреждений из г.Кингисепп, г.Ивангорода, Санкт-Петербурга,
-        г.Сланцы и Волосовского района. </p>
-      <div class="card__links links">
-        <a href="https://youtu.be/GBCS0qtjDgU" class="link" target="_blank"><img src="./img/icons/youtube.png" alt="логотип ютуб"></a>
-        <a href="https://vk.com/wall-75889999_319" class="link card-link" target="_blank">Читать далее ...</a>
-      </div>
-      <!-- /.card__links links -->
-      <img src="https://via.placeholder.com/320x180" alt="Логотип соревнования">
-    </article>
-  </main>
-  <footer class="footer">
-    <div class="copy">
-      <span>&copy; 2017-2019 Оксана Черкашина</span>
-      <span>Сделано с <img src="./img/icons/heart-solid.png" alt="маленькое сердечко"> и <img src="./img/icons/coffee-solid.png" alt="с чашкой чай"> </span>
-    </div>
-    <!-- /.copy -->
-  </footer>
+      <!-- /.copy -->
+    </footer>
+  </div>
+  <!-- /#grid -->
+
 
   //= template/footer.html
 </body>
