--- a/src/index.html
+++ b/src/index.html
@@ -38,57 +38,105 @@
             <p class="card-time__title">09 ноября, 2019 Кингисепп</p>
           </div><!-- /.card-time -->
           <h3 class="card__title">V Окружной форум по робототехнике Кингисепп</h3>
-          <p class="card__descr">9 ноября в Центре информационных технологий г. Кингисепп состоялся V Окружной форум робототехники Юго-Западного образовательного округа «Старт в будущее». Участники форума — обучающиеся и педагоги Кингисеппа,
-            Ивангорода,
-            Сланцев, Гатчины, Киришей, Соснового Бора, Волосово и Нарвы.</p>
+          <div class="card__descr">
+            <div class="card__img">
+              <img src="https://via.placeholder.com/100x80" alt="Логотип соревнования"></div>
+            <!-- /.card__img -->
+            <p class="card__descr-text">9 ноября в Центре информационных технологий г. Кингисепп состоялся V Окружной форум робототехники Юго-Западного образовательного округа «Старт в будущее». Участники форума — обучающиеся и педагоги Кингисеппа,
+              Ивангорода,
+              Сланцев, Гатчины, Киришей, Соснового Бора, Волосово и Нарвы.</p>
+          </div>
+          <!-- /.card__descr -->
+
           <div class="card__links links">
-            <a href="https://youtu.be/xANEOrfSNQA" class="link" target="_blank"><img src="./img/icons/youtube.png" alt="логотип ютуб"></a>
+            <a href="https://youtu.be/xANEOrfSNQA" class="link card-link--youtube" target="_blank">
+              <!-- <img src="./img/icons/youtube.png" alt="логотип ютуб">  -->
+              Смотреть на канале</a>
             <a href="http://kingisepp.ru/news/block-5543/" class="link card-link" target="_blank">Читать далее ...</a>
           </div>
           <!-- /.card__links links -->
-          <img src="https://via.placeholder.com/320x180" alt="Логотип соревнования">
+          <div class="card__carousel">
+            <img src="https://via.placeholder.com/320x180" alt="Картинки с соревнований"></div>
+          <!-- /.card__img -->
         </article>
         <article class="card">
           <div class="card-time">
             <p class="card-time__title">03 ноября, 2019 Всеволожск</p>
           </div><!-- /.card-time -->
           <h3 class="card__title">Открытые соревнования по робототехнике Всеволожск</h3>
-          <p class="card__descr">3 ноября 2019 года прошли Открытые соревнования по робототехнике Всеволожского района. Наши обучающиеся приняли участие в категории "Интеллектуальное сумо". </p>
+          <div class="card__descr">
+            <div class="card__img">
+              <img src="https://via.placeholder.com/100x80" alt="Логотип соревнования"></div>
+            <!-- /.card__img -->
+            <p class="card__descr-text">3 ноября 2019 года прошли Открытые соревнования по робототехнике Всеволожского района. Наши обучающиеся приняли участие в категории "Интеллектуальное сумо". </p>
+          </div>
+          <!-- /.card__descr -->
+
           <div class="card__links links">
-            <a href="https://youtu.be/Ufip2-paMz8" class="link" target="_blank"><img src="./img/icons/youtube.png" alt="логотип ютуб"></a>
+            <a href="https://youtu.be/Ufip2-paMz8" class="link card-link--youtube" target="_blank">
+              <!-- <img src="./img/icons/youtube.png" alt="логотип ютуб">  -->
+              Смотреть на канале</a>
             <a href="https://vk.com/wall-75889999_337" class="link card-link" target="_blank">Читать далее ...</a>
           </div>
           <!-- /.card__links links -->
-          <img src="https://via.placeholder.com/320x180" alt="Логотип соревнования">
+          <div class="card__carousel">
+            <img src="https://via.placeholder.com/320x180" alt="Картинки с соревнований"></div>
+          <!-- /.card__img -->
         </article>
+
         <article class="card">
           <div class="card-time">
             <p class="card-time__title">23 октября, 2019 Первомайское, Выборгский район</p>
           </div><!-- /.card-time -->
           <h3 class="card__title">Областной сбор "Юный техник".</h3>
-          <p class="card__descr">23.10.2019 обучающиеся Дома творчества участвовали в областном сборе "Юный техник", который проходил в Первомайском центре образования в Выборгском районе. Для ребят провели экскурсии по самому центру и его музею, а
-            также
-            провели 3 увлекательных мастер-класса</p>
+          <div class="card__descr">
+            <div class="card__img">
+              <img src="https://via.placeholder.com/100x80" alt="Логотип соревнования"></div>
+            <!-- /.card__img -->
+            <p class="card__descr-text">23.10.2019 обучающиеся Дома творчества участвовали в областном сборе "Юный техник", который проходил в Первомайском центре образования в Выборгском районе. Для ребят провели экскурсии по самому центру и его
+              музею, а
+              также
+              провели 3 увлекательных мастер-класса</p>
+          </div>
+          <!-- /.card__descr -->
+
           <div class="card__links links">
-            <a href="https://youtu.be/2ilExnq7F7Q" class="link" target="_blank"><img src="./img/icons/youtube.png" alt="логотип ютуб"></a>
+            <a href="https://youtu.be/2ilExnq7F7Q" class="link card-link--youtube" target="_blank">
+              <!-- <img src="./img/icons/youtube.png" alt="логотип ютуб">  -->
+              Смотреть на канале</a>
             <a href="http://pervomayco.ru/about/news/2019/543/" class="link card-link" target="_blank">Читать далее ...</a>
           </div>
           <!-- /.card__links links -->
-          <img src="https://via.placeholder.com/320x180" alt="Логотип соревнования">
+          <div class="card__carousel">
+            <img src="https://via.placeholder.com/320x180" alt="Картинки с соревнований"></div>
+          <!-- /.card__img -->
         </article>
+
         <article class="card">
           <div class="card-time">
             <p class="card-time__title">19 мая, 2019 Сланцы</p>
           </div><!-- /.card-time -->
           <h3 class="card__title">III соревнования Роботы вперед</h3>
-          <p class="card__descr">19 мая 2019 года в Доме творчества на базе ул.Грибоедова д.8 прошли lll Соревнования «Роботы вперёд». В данном мероприятии приняли участие обучающиеся разных учреждений из г.Кингисепп, г.Ивангорода, Санкт-Петербурга,
-            г.Сланцы и Волосовского района. </p>
+          <div class="card__descr">
+            <div class="card__img">
+              <img src="https://via.placeholder.com/100x80" alt="Логотип соревнования"></div>
+            <!-- /.card__img -->
+            <p class="card__descr-text">19 мая 2019 года в Доме творчества на базе ул.Грибоедова д.8 прошли lll Соревнования «Роботы вперёд». В данном мероприятии приняли участие обучающиеся разных учреждений из г.Кингисепп, г.Ивангорода,
+              Санкт-Петербурга,
+              г.Сланцы и Волосовского района. </p>
+          </div>
+          <!-- /.card__descr -->
+
           <div class="card__links links">
-            <a href="https://youtu.be/GBCS0qtjDgU" class="link" target="_blank"><img src="./img/icons/youtube.png" alt="логотип ютуб"></a>
+            <a href="https://youtu.be/GBCS0qtjDgU" class="link card-link--youtube" target="_blank">
+              <!-- <img src="./img/icons/youtube.png" alt="логотип ютуб">  -->
+              Смотреть на канале</a>
             <a href="https://vk.com/wall-75889999_319" class="link card-link" target="_blank">Читать далее ...</a>
           </div>
           <!-- /.card__links links -->
-          <img src="https://via.placeholder.com/320x180" alt="Логотип соревнования">
+          <div class="card__carousel">
+            <img src="https://via.placeholder.com/320x180" alt="Картинки с соревнований"></div>
+          <!-- /.card__img -->
         </article>
       </div>
       <!-- /.cards -->
