Верстка карточки - семантика, стилизация

--- a/src/index.html
+++ b/src/index.html
@@ -30,34 +30,37 @@
       <!-- /.container -->
 
     </aside>
-    <main class="main">
+    <main class="main" role="main">
       <h2 class="main-title">Что нового?</h2>
+
       <div class="cards">
         <article class="card">
-          <div class="card-time">
-            <p class="card-time__title">09 ноября, 2019 Кингисепп</p>
-          </div><!-- /.card-time -->
-          <h3 class="card__title">V Окружной форум по робототехнике Кингисепп</h3>
-          <div class="card__descr">
-            <div class="card__img">
-              <img src="https://via.placeholder.com/100x80" alt="Логотип соревнования"></div>
-            <!-- /.card__img -->
-            <p class="card__descr-text">9 ноября в Центре информационных технологий г. Кингисепп состоялся V Окружной форум робототехники Юго-Западного образовательного округа «Старт в будущее». Участники форума — обучающиеся и педагоги Кингисеппа,
-              Ивангорода,
-              Сланцев, Гатчины, Киришей, Соснового Бора, Волосово и Нарвы.</p>
-          </div>
-          <!-- /.card__descr -->
+          <header class="card-header">
+            <p class="card-header__title">09 ноября, 2019 Кингисепп</p>
+          </header>
+          <div class="card-body">
+            <h3 class="card-body__title">V Окружной форум по робототехнике Кингисепп</h3>
+            <div class="card-body__descr">
+              <div class="card__img">
+                <img src="https://via.placeholder.com/100x80" alt="Логотип соревнования"></div>
+              <!-- /.card__img -->
+              <p class="card-body__text">9 ноября в Центре информационных технологий г. Кингисепп состоялся V Окружной форум робототехники Юго-Западного образовательного округа «Старт в будущее». Участники форума — обучающиеся и педагоги Кингисеппа,
+                Ивангорода,
+                Сланцев, Гатчины, Киришей, Соснового Бора, Волосово и Нарвы.</p>
+            </div>
+            <!-- /.card__descr -->
 
-          <div class="card__links links">
-            <a href="https://youtu.be/xANEOrfSNQA" class="link card-link--youtube" target="_blank">
+            <div class="card__carousel">
+              <img src="https://via.placeholder.com/320x180" alt="Картинки с соревнований"></div>
+          </div>
+          <!-- /.card-body -->
+          <footer class="card-footer">
+            <a href="https://youtu.be/xANEOrfSNQA" class="link card-footer__link--youtube" target="_blank">
               <!-- <img src="./img/icons/youtube.png" alt="логотип ютуб">  -->
               Смотреть на канале</a>
-            <a href="http://kingisepp.ru/news/block-5543/" class="link card-link" target="_blank">Читать далее ...</a>
-          </div>
+            <a href="http://kingisepp.ru/news/block-5543/" class="link card-footer__link" target="_blank">Читать далее ...</a>
+          </footer>
           <!-- /.card__links links -->
-          <div class="card__carousel">
-            <img src="https://via.placeholder.com/320x180" alt="Картинки с соревнований"></div>
-          <!-- /.card__img -->
         </article>
         <article class="card">
           <div class="card-time">
