Исправил стили для footer/ закончили 404, index/

--- a/src/404.html
+++ b/src/404.html
@@ -8,19 +8,20 @@
 </head>
 
 <body id="error">
-  <div class="error">
-    <div class="container">
+  <div class="container">
+    <div class="error">
       <h2 class="error__header">404</h2>
-      <p class="error__content">К сожалению такая страничка пока не существует...</p>
+      <p class="error__content">К сожалению, такая страничка пока не существует...</p>
 
       <h3 class="main-title error__title">Страница не найдена!!!</h3>
       <div class="error__link">
-        <a href="./index.html" class="link error__link">Вернуться на главную</a>
+        <a href="./index.html" class="link">Вернуться на главную</a>
       </div>
       <!-- /.error__link -->
     </div>
+    <!-- /.error -->
   </div>
-  <!-- /.error -->
+  <!-- /.container -->
 
   //= template/footer.html
   //= template/footer-script.html
