Верстка блога, перемещение файлов html

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,7 +12,7 @@
   //= template/hidden.html
 
   <div id="grid">
-    //= template/header.html
+    //= template/header-index.html
     <main class="main" role="main">
       <h2 class="main-title">Что нового?</h2>
       <div class="cards">
