Верстка архива, подготовка ссылок

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -130,6 +130,10 @@
         </article>
       </div>
       <!-- /.cards -->
+      <div class="archiv">
+        <div class="container">
+          <a href="./archiv.html" class="link archiv__link">Смотреть архив</a></div>
+      </div>
     </main>
     //= template/footer.html
 
