Подготовка статических файлов

--- a/src/html/404.html
+++ b/src/html/404.html
@@ -4,6 +4,9 @@
 <head>
   //= template/head-index.html
   //= template/link-index.html
+  //= template/head-yandex.html
+  //= template/head-static.html
+
   <title>404 - Оксана Черкашина. Блог</title>
 </head>
 
