--- a/src/html/archiv.html
+++ b/src/html/archiv.html
@@ -4,6 +4,9 @@
 <head>
   //= template/head-index.html
   //= template/link-index.html
+  //= template/head-yandex.html
+  //= template/head-static.html
+
   <title>Оксана Черкашина. Архив новостей.</title>
 </head>
 
