--- a/src/html/about.html
+++ b/src/html/about.html
@@ -4,6 +4,9 @@
 <head>
   //= template/head-index.html
   //= template/link-index.html
+  //= template/head-yandex.html
+  //= template/head-static.html
+
   <title>Оксана Черкашина. Обо мне</title>
 </head>
 
@@ -12,34 +15,35 @@
     //= template/header.html
 
     <main class="main" role="main">
-      <article class="card">
-        <header class="card-header">
-          <p class="card-header__title">01 февраля, 2020</p>
+      <article class="about">
+        <header class="about-header">
+          <p class="about-header__title">01 февраля, 2020</p>
         </header>
-        <div class="card-body">
-          <h3 class="card-body__title">О проекте и обо мне</h3>
-          <div class="card-body__descr card-body__descr--column">
-            <!-- /.card__img -->
-            <p class="card-body__text">Целью данного проекта является публикация информации о моей работе в Сланцевском доме творчества. Здесь вы найдете последние новости, а я постараюсь во время обновлять страницу.</p>
-            <div class="card__img">
-              <img src="https://via.placeholder.com/600x200" alt="Логотип соревнования"></div>
-            <p class="card-body__text">Я работаю педагогом дополнительного образования с сентября 2016г. С этого момента я начала принимать участия в разнообразных мероприятиях, конкурсах и соревнованиях.
+        <div class="about-body">
+          <h3 class="about-body__title">О проекте и обо мне</h3>
+          <div class="about-body__descr about-body__descr--column">
+            <!-- /.about__img -->
+            <p class="about-body__text">Целью данного проекта является публикация информации о моей работе в Сланцевском доме творчества. Здесь вы найдете последние новости, а я постараюсь во время обновлять страницу.</p>
+            <div class="about__img">
+              <img src="./img/photo/about-oksana1.jpg" alt="Фото Оксаны с обучающимися"></div>
+            <p class="about-body__text">Я работаю педагогом дополнительного образования с сентября 2016г. С этого момента я начала принимать участия в разнообразных мероприятиях, конкурсах и соревнованиях.
               в результате появились новые знакомства в образовательных учреждениях г. Сланцы, Ленинградской области и г. Санкт-Петербурга, расширился круг моего общения и появились новые увлечения и идеи.
             </p>
-            <div class="card__img">
-              <img src="https://via.placeholder.com/600x200" alt="Логотип соревнования"></div>
-            <p class="card-body__text">Мне интересно работать с учащимися и проводить с ними время, участвовать в соревнованиях и конкурсах. И это здорово, потому что я этим зарабатываю на жизнь.
+            <div class="about__img">
+              <img class="" src="./img/photo/about-oksana2.jpg" alt="Фото Оксаны с обучающимися">
+            </div>
+            <p class="about-body__text">Мне интересно работать с учащимися и проводить с ними время, участвовать в соревнованиях и конкурсах. И это здорово, потому что я этим зарабатываю на жизнь.
             </p>
 
           </div>
-          <!-- /.card__descr -->
+          <!-- /.about__descr -->
 
         </div>
-        <!-- /.card-body -->
-        <footer class="card-footer">
-          <a href="./index.html" class="link card-footer__link">Вернуться назад ...</a>
+        <!-- /.about-body -->
+        <footer class="about-footer">
+          <a href="./index.html" class="link about-footer__link">Вернуться назад ...</a>
         </footer>
-        <!-- /.card__links links -->
+        <!-- /.about__links links -->
       </article>
 
     </main>
