Обновление шаблонов, добавление библиотек js

--- a/src/html/404.html
+++ b/src/html/404.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" prefix="og: http://ogp.me/ns#">
+<html lang="ru" prefix="og: http://ogp.me/ns#">
 
 <head>
-  //= template/head-index.html
-  //= template/link-index.html
+  //= template/head-meta.html
+  //= template/head-link.html
   //= template/head-yandex.html
   //= template/head-static.html
 
@@ -11,6 +11,7 @@
 </head>
 
 <body id="error">
+  //= template/hidden.html
   <div class="container">
     <div class="error">
       <h2 class="error__header">404</h2>
