--- a/src/html/about.html
+++ b/src/html/about.html
@@ -2,8 +2,8 @@
 <html lang="ru" prefix="og: http://ogp.me/ns#">
 
 <head>
-  //= template/head-index.html
-  //= template/link-index.html
+  //= template/head-meta.html
+  //= template/head-link.html
   //= template/head-yandex.html
   //= template/head-static.html
 
@@ -11,6 +11,8 @@
 </head>
 
 <body id="about">
+
+  //= template/hidden.html
   <div id="grid">
     //= template/header.html
 
