--- a/src/html/archiv.html
+++ b/src/html/archiv.html
@@ -2,8 +2,8 @@
 <html lang="ru" prefix="og: http://ogp.me/ns#">
 
 <head>
-  //= template/head-index.html
-  //= template/link-index.html
+  //= template/head-meta.html
+  //= template/head-link.html
   //= template/head-yandex.html
   //= template/head-static.html
 
