Подключение slick, стилизация статьи Роботрон. + разметка open graph

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,7 +5,6 @@
   //= template/head-meta.html
   //= template/head-link.html
   //= template/head-yandex.html
-  //= template/head-static.html
   <title>Оксана Черкашина. Блог</title>
 </head>
 
@@ -134,7 +133,7 @@
       <!-- /.cards -->
       <div class="archiv">
         <div class="container">
-          <a href="./archiv.html" class="link archiv__link">Смотреть архив</a></div>
+          <a href="./archiv.html" class="link archiv__link">Архив</a></div>
       </div>
     </main>
     //= template/footer.html
